--- a/index.html
+++ b/index.html
@@ -92,33 +92,105 @@
     </div>
 
   </section>
-  
-  <div class="section">
-    <div class="box3">
-      <div class="div">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              
-              <img class="card1" src="Assets/images/card1.png" />
-  
-  
-  
-            </div>
-            <div class="col-md-6">
-             <h4 class="h4">
-              TIER 01: Bronze
-             </h4>
-  
-  
-            </div>
-          </div>
+
+  <section class="box3">
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="card1" src="Assets/images/card1.png" />
+        </div>
+        <div class="col-md-6">
+          <h4 class="h4">
+            TIER 01: Bronze
+          </h4>
         </div>
       </div>
-  
-  
     </div>
-  </div>
+
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="card2" src="Assets/images/card2.png" />
+        </div>
+        <div class="col-md-6">
+          <h4 class="h4">
+            TIER 02:Silver
+          </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="card3" src="Assets/images/card3.png" />
+        </div>
+        <div class="col-md-6">
+          <h4 class="h4">
+            TIER 02: Gold
+          </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="card4" src="Assets/images/card4.png" />
+        </div>
+        <div class="col-md-6">
+          <h4 class="h4">
+            TIER 02: PLatinum
+          </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="card5" src="Assets/images/card5.png" />
+        </div>
+        <div class="col-md-6">
+          <h4 class="h4">
+            TIER 03:Solana
+          </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="card6" src="Assets/images/card6.png" />
+        </div>
+        <div class="col-md-6">
+          <h4 class="h4">
+            TIER (?): Black
+          </h4>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="box4">
+    <div class="container">
+<div class="border">
+<h4 class="start">
+  EARNINGS CALCULATOR
+</h4>
+<h1 class="start2">
+  Calculate your monthly <span style=" color: #27E790">profits</span> 
+</h1>
+</div>
+
+      </div>
+</section>
+
 
 
 
